--- a/package.json
+++ b/package.json
@@ -35,6 +35,12 @@
       "hash": "QmeQW4ayVqi7Jjay1SrP2wYydsH9KwSrzQBnqyC25gPFnG",
       "name": "go-notifier",
       "version": "1.0.0"
+    },
+    {
+      "author": "multiformats",
+      "hash": "QmUxSEGbv2nmYNnfXi7839wwQqTN3kwQeUxe8dTjZWZs7J",
+      "name": "go-multiaddr",
+      "version": "1.2.7"
     }
   ],
   "gxVersion": "0.10.0",
